# ITKPrincipalComponentsAnalysis

./: CMakeLists.txt  README.rst  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: build-test-package.yml
doc/: CMakeLists.txt
doc/Report001/: CMakeLists.txt  InsightJournal.bib
examples/: CMakeLists.txt  VectorKernelPCA.cxx
include/: itkVectorFieldPCA.h  itkVectorFieldPCA.hxx
test/: CMakeLists.txt  itkVectorKernelPCATest.cxx
wrapping/: CMakeLists.txt  itkGaussianDistanceKernel.wrap
